# Normalizador-Excel

app/: pyproject.toml
app/app/: excell.py  main.py
app/main.build/: __bytecode.const  __constants.c  __constants.txt  __loader.c  clcache-stats.18420.txt  module.PySimpleGUI-preLoad.c  module.PySimpleGUI.PySimpleGUI.const  module.PySimpleGUI.c  module.__main__.c  module.__main__.const  module.et_xmlfile.c  module.et_xmlfile.xmlfile.c  module.excell.c  module.excell.const  module.openpyxl._constants.c  module.openpyxl.c  module.openpyxl.cell._writer.c  module.openpyxl.cell._writer.const  module.openpyxl.cell.c  module.openpyxl.cell.cell.c  module.openpyxl.cell.read_only.c  module.openpyxl.cell.rich_text.c  module.openpyxl.cell.text.c  module.openpyxl.cell.text.const  module.openpyxl.chart._3d.c  module.openpyxl.chart._chart.c  module.openpyxl.chart.area_chart.c  module.openpyxl.chart.axis.c  module.openpyxl.chart.bar_chart.c  module.openpyxl.chart.bubble_chart.c  module.openpyxl.chart.c  module.openpyxl.chart.chartspace.c  module.openpyxl.chart.data_source.c  module.openpyxl.chart.data_source.const  module.openpyxl.chart.descriptors.c  module.openpyxl.chart.error_bar.c  module.openpyxl.chart.label.c  module.openpyxl.chart.layout.c  module.openpyxl.chart.layout.const  module.openpyxl.chart.legend.c  (+171 more)
