[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Mr.Makako <diegofdiaz1717@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
openpyxl = "^3.1.2"
pysimplegui = "^4.60.5"
nuitka = "^1.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
